tests/compile_fail/derive_column_multiple_fields.rs
use balsaq::Column;

#[derive(Column)]
pub struct Foo(i64, String);

fn main() {}
