tests/compile_fail/derive_column_multiple_fields.stderr
error: derive(Column) requires a single-field tuple struct
 --> tests/compile_fail/derive_column_multiple_fields.rs:4:12
  |
4 | pub struct Foo(i64, String);
  |            ^^^
